@@ -34,6 +34,16 @@ mpfr_buildopt_tls_p (void)
 }
 
 int
+mpfr_buildopt_float128_p (void)
+{
+#ifdef MPFR_WANT_FLOAT128
+  return 1;
+#else
+  return 0;
+#endif
+}
+
+int
 mpfr_buildopt_decimal_p (void)
 {
 #ifdef MPFR_WANT_DECIMAL_FLOATS
